tests/ui/wait-for-window-property-false.goml
// This test ensures that the `wait-for-window-property-false` command is behaving like expected.
go-to: "file://" + |CURRENT_DIR| + "/" + |DOC_PATH| + "/elements.html"
set-timeout: 300
// Shouldn't wait here since it's already the case.
wait-for-window-property-false: {"windowProp": "bla"}
assert-window-property: {"windowProp": null}
click: "#js-wait-window-prop"
// Should wait for 100ms here.
wait-for-window-property-false: {"windowProp": null}
click: "#js-wait-window-prop"
// Should wait for 100ms here.
wait-for-window-property-false: ({"windowProp": "0", "non-existent": "bla"}, ENDS_WITH)
wait-for-window-property-false: {"windowProp": "hello"}
// ERROR:
// Check that the script won't stop running anything after the previous command failed.
assert-window-property: {"windowProp": "tadam"}
//~^ ERROR: [expected `tadam` for window property `windowProp`, found `hello1`]

// object-path
assert-window-property: {"ba"."x": null}
click: "#js-wait-window-prop2"
// Should wait for 100ms here.
wait-for-window-property-false: {"ba"."x": null}
